@@ -82,6 +82,7 @@ public class DatasetsController implements Initializable, StageBasedController, 
 
     private static final Logger log = LoggerFactory.getLogger(DatasetsController.class);
     private static final Map<String, double[]> savedValues = new HashMap<>();
+    private static final String SCALE = "scale";
     private Stage stage;
     @FXML
     private ToolBar toolBar;
@@ -89,7 +90,7 @@ public class DatasetsController implements Initializable, StageBasedController, 
     private TableView<DatasetBase> tableView;
 
     private int dimNumber = 0;
-    TableColumn dim1Column;
+    TableColumn<DatasetBase, Void> dim1Column;
     Button valueButton;
     Button saveParButton;
     Button saveDatasetButton;
@@ -118,7 +119,7 @@ public class DatasetsController implements Initializable, StageBasedController, 
     }
 
     public List<Dataset> getSelectedDatasets() {
-        return tableView.getSelectionModel().getSelectedItems().stream().map(datasetBase -> (Dataset) datasetBase).toList();
+        return tableView.getSelectionModel().getSelectedItems().stream().map(Dataset.class::cast).toList();
     }
 
     public static DatasetsController create() {
@@ -194,10 +195,10 @@ public class DatasetsController implements Initializable, StageBasedController, 
         }
     }
 
-    public class ValueItemDoubleFieldTableCell extends TextFieldTableCell<ValueItem, Number> {
+    public static class ValueItemDoubleFieldTableCell extends TextFieldTableCell<ValueItem, Number> {
 
         public ValueItemDoubleFieldTableCell() {
-            super(new StringConverter<Number>() {
+            super(new StringConverter<>() {
                 @Override
                 public String toString(Number number) {
                     return number == null ? "" : String.format("%.5f", number.doubleValue());
@@ -217,7 +218,7 @@ public class DatasetsController implements Initializable, StageBasedController, 
         @Override
         public void commitEdit(Number newValue) {
             super.commitEdit(newValue);
-            ((ValueItem) getTableRow().getItem()).setValue(newValue.doubleValue());
+            getTableRow().getItem().setValue(newValue.doubleValue());
 
             TableView<ValueItem> table = getTableView();
             TableColumn<ValueItem, Number> column = getTableColumn();
@@ -245,11 +246,11 @@ public class DatasetsController implements Initializable, StageBasedController, 
             super.commitEdit(newValue);
             switch (column) {
                 case "level" -> dataset.setLvl(newValue);
-                case "scale" -> dataset.setScale(newValue);
+                case SCALE -> dataset.setScale(newValue);
                 case "ref" -> dataset.setRefValue(getDimNum(), newValue);
+                default -> log.warn("Wrong column type {}", column);
             }
         }
-
     }
 
     class DatasetStringFieldTableCell extends TextFieldTableCell<DatasetBase, String> {
@@ -272,7 +273,6 @@ public class DatasetsController implements Initializable, StageBasedController, 
 
     void initTable() {
         DoubleStringConverter dsConverter = new DoubleStringConverter();
-        StringConverter<String> sConverter = new DefaultStringConverter();
         tableView.setEditable(true);
         tableView.getSelectionModel().setSelectionMode(SelectionMode.MULTIPLE);
 
@@ -284,8 +284,8 @@ public class DatasetsController implements Initializable, StageBasedController, 
         levelCol.setCellValueFactory(new PropertyValueFactory<>("lvl"));
         levelCol.setCellFactory(tc -> new DatasetDoubleFieldTableCell(dsConverter));
 
-        TableColumn<DatasetBase, Double> scaleCol = new TableColumn<>("scale");
-        scaleCol.setCellValueFactory(new PropertyValueFactory<>("scale"));
+        TableColumn<DatasetBase, Double> scaleCol = new TableColumn<>(SCALE);
+        scaleCol.setCellValueFactory(new PropertyValueFactory<>(SCALE));
         scaleCol.setCellFactory(tc -> new DatasetDoubleFieldTableCell(dsConverter));
 
         TableColumn<DatasetBase, Double> noiseCol = new TableColumn<>("noise");
@@ -303,93 +303,6 @@ public class DatasetsController implements Initializable, StageBasedController, 
         nFreqDimCol.setPrefWidth(30);
         nFreqDimCol.setOnEditCommit(this::nFreqDimsChanged);
 
-
-        TableColumn<DatasetBase, Boolean> posDrawOnCol = new TableColumn<>("on");
-        posDrawOnCol.setCellValueFactory(new PropertyValueFactory<>("negDrawOn"));
-        posDrawOnCol.setCellFactory(col -> new CheckBoxTableCell<>(index -> {
-            BooleanProperty active = new SimpleBooleanProperty(tableView.getItems().get(index).getPosDrawOn());
-            active.addListener((obs, wasActive, isNowActive) -> {
-                DatasetBase item = tableView.getItems().get(index);
-                item.setPosDrawOn(isNowActive);
-            });
-            return active;
-        }));
-        posDrawOnCol.setPrefWidth(25);
-        posDrawOnCol.setMaxWidth(25);
-        posDrawOnCol.setResizable(false);
-
-        TableColumn<DatasetBase, Color> posColorCol = new TableColumn<>("color");
-        posColorCol.setPrefWidth(50);
-        posColorCol.setCellValueFactory((CellDataFeatures<DatasetBase, Color> p) -> new ReadOnlyObjectWrapper<>(Color.web(p.getValue().getPosColor())));
-        posColorCol.setCellFactory((TableColumn<DatasetBase, Color> column) -> new TableCell<>() {
-            @Override
-            protected void updateItem(Color item, boolean empty) {
-                super.updateItem(item, empty);
-                setText(null);
-                if (empty || (item == null)) {
-                    setGraphic(null);
-                } else {
-                    final ColorPicker cp = new ColorPicker();
-                    cp.setValue(item);
-                    setGraphic(cp);
-                    cp.setOnAction((ActionEvent t) -> {
-                        getTableView().edit(getTableRow().getIndex(), column);
-                        commitEdit(cp.getValue());
-                    });
-                }
-            }
-
-            @Override
-            public void commitEdit(Color item) {
-                super.commitEdit(item);
-                DatasetBase dataset = getTableRow().getItem();
-                dataset.setPosColor(item.toString());
-            }
-        });
-
-        TableColumn<DatasetBase, Boolean> negDrawOnCol = new TableColumn<>("on");
-        negDrawOnCol.setCellValueFactory(new PropertyValueFactory<>("negDrawOn"));
-        negDrawOnCol.setCellFactory(col -> new CheckBoxTableCell<>(index -> {
-            BooleanProperty active = new SimpleBooleanProperty(tableView.getItems().get(index).getNegDrawOn());
-            active.addListener((obs, wasActive, isNowActive) -> {
-                DatasetBase item = tableView.getItems().get(index);
-                item.setNegDrawOn(isNowActive);
-            });
-            return active;
-        }));
-        negDrawOnCol.setPrefWidth(25);
-        negDrawOnCol.setMaxWidth(25);
-        negDrawOnCol.setResizable(false);
-
-        TableColumn<DatasetBase, Color> negColorCol = new TableColumn<>("color");
-        negColorCol.setPrefWidth(50);
-        negColorCol.setCellValueFactory((CellDataFeatures<DatasetBase, Color> p) -> new ReadOnlyObjectWrapper<>(Color.web(p.getValue().getNegColor())));
-        negColorCol.setCellFactory((TableColumn<DatasetBase, Color> column) -> new TableCell<>() {
-            @Override
-            protected void updateItem(Color item, boolean empty) {
-                super.updateItem(item, empty);
-                setText(null);
-                if (empty || (item == null)) {
-                    setGraphic(null);
-                } else {
-                    final ColorPicker cp = new ColorPicker();
-                    cp.setValue(item);
-                    setGraphic(cp);
-                    cp.setOnAction((ActionEvent t) -> {
-                        getTableView().edit(getTableRow().getIndex(), column);
-                        commitEdit(cp.getValue());
-                    });
-                }
-            }
-
-            @Override
-            public void commitEdit(Color item) {
-                super.commitEdit(item);
-                DatasetBase dataset = getTableRow().getItem();
-                dataset.setNegColor(item.toString());
-            }
-        });
-
         TableColumn<DatasetBase, Integer> sizeCol = new TableColumn<>("size");
         sizeCol.setCellValueFactory((CellDataFeatures<DatasetBase, Integer> p) -> {
             DatasetBase dataset = p.getValue();
@@ -402,19 +315,8 @@ public class DatasetsController implements Initializable, StageBasedController, 
         });
         sizeCol.setPrefWidth(50);
 
-        TableColumn<DatasetBase, String> labelCol = new TableColumn<>("label");
-        labelCol.setCellFactory(tc -> new DatasetStringFieldTableCell(sConverter));
-        labelCol.setCellValueFactory((CellDataFeatures<DatasetBase, String> p) -> {
-            DatasetBase dataset = p.getValue();
-            String label = "";
-            int iDim = getDimNum();
-            if (dataset.getNDim() > iDim) {
-                label = dataset.getLabel(iDim);
-            }
-            return new ReadOnlyObjectWrapper<>(label);
-        });
+        TableColumn<DatasetBase, String> labelCol = buildlabelColumn();
 
-        labelCol.setPrefWidth(50);
 
         TableColumn<DatasetBase, Double> sfCol = new TableColumn<>("sf");
         sfCol.setCellValueFactory((CellDataFeatures<DatasetBase, Double> p) -> {
@@ -477,9 +379,9 @@ public class DatasetsController implements Initializable, StageBasedController, 
 
         nucleusCol.setPrefWidth(75);
 
-        var positiveColumn = new TableColumn("Positive");
-        var negativeColumn = new TableColumn("Negative");
-        dim1Column = new TableColumn("Dim1");
+        TableColumn<DatasetBase, Void> positiveColumn = new TableColumn<>("Positive");
+        TableColumn<DatasetBase, Void> negativeColumn = new TableColumn<>("Negative");
+        dim1Column = new TableColumn<>("Dim1");
 
         Polygon polygon = new Polygon();
         polygon.getPoints().addAll(2.0, 2.0, 12.0, 2.0, 7.0, 10.0);
@@ -489,9 +391,11 @@ public class DatasetsController implements Initializable, StageBasedController, 
 
         dim1Column.setGraphic(polygon);
         dim1Column.setPrefWidth(400);
-        positiveColumn.getColumns().setAll(posDrawOnCol, posColorCol);
-        negativeColumn.getColumns().setAll(negDrawOnCol, negColorCol);
-        dim1Column.getColumns().setAll(labelCol, sizeCol, sfCol, swCol, refCol, nucleusCol);
+        var posCol = buildPosNegCol(true);
+        var negCol = buildPosNegCol(false);
+        positiveColumn.getColumns().setAll(List.of(posCol.onColumn, posCol.colorColumn));
+        negativeColumn.getColumns().setAll(List.of(negCol.onColumn, negCol.colorColumn));
+        dim1Column.getColumns().setAll(List.of(labelCol, sizeCol, sfCol, swCol, refCol, nucleusCol));
         ContextMenu menu = new ContextMenu();
         int maxDim = 6;
         for (int i = 0; i < maxDim; i++) {
@@ -501,17 +405,100 @@ public class DatasetsController implements Initializable, StageBasedController, 
             menu.getItems().add(dimItem);
         }
         dim1Column.setContextMenu(menu);
-        tableView.getColumns().setAll(fileNameCol, nDimCol, nFreqDimCol, levelCol, scaleCol, noiseCol, positiveColumn, negativeColumn, dim1Column);
+        tableView.getColumns().setAll(List.of(fileNameCol, nDimCol, nFreqDimCol, levelCol, scaleCol, noiseCol, positiveColumn, negativeColumn, dim1Column));
         tableView.getSelectionModel().setSelectionMode(SelectionMode.MULTIPLE);
         setDatasetList((ObservableList<DatasetBase>) ProjectBase.getActive().getDatasets());
     }
 
+    record PosNegCol(TableColumn<DatasetBase, Boolean> onColumn, TableColumn<DatasetBase, Color> colorColumn) {}
+
+    PosNegCol buildPosNegCol(boolean posMode) {
+        String columPropName = posMode ? "posDrawOn" : "negDrawOn";
+        TableColumn<DatasetBase, Boolean> drawOnCol = new TableColumn<>("on");
+        drawOnCol.setCellValueFactory(new PropertyValueFactory<>(columPropName));
+        drawOnCol.setCellFactory(col -> new CheckBoxTableCell<>(index -> {
+            DatasetBase datasetBase = tableView.getItems().get(index);
+            boolean onOff = posMode ? datasetBase.getPosDrawOn() : datasetBase.getNegDrawOn();
+            BooleanProperty active = new SimpleBooleanProperty(onOff);
+            active.addListener((obs, wasActive, isNowActive) -> {
+                DatasetBase item = tableView.getItems().get(index);
+                if (posMode) {
+                    item.setPosDrawOn(isNowActive);
+                } else {
+                    item.setNegDrawOn(isNowActive);
+                }
+            });
+            return active;
+        }));
+        drawOnCol.setPrefWidth(25);
+        drawOnCol.setMaxWidth(25);
+        drawOnCol.setResizable(false);
+
+        TableColumn<DatasetBase, Color> colorColumn = new TableColumn<>("color");
+        colorColumn.setPrefWidth(50);
+        colorColumn.setCellValueFactory((CellDataFeatures<DatasetBase, Color> p) -> {
+            String colorString = posMode ? p.getValue().getPosColor() : p.getValue().getNegColor();
+            return new ReadOnlyObjectWrapper<>(Color.web(colorString));
+        });
+        colorColumn.setCellFactory((TableColumn<DatasetBase, Color> column) -> new TableCell<>() {
+            @Override
+            protected void updateItem(Color item, boolean empty) {
+                super.updateItem(item, empty);
+                setText(null);
+                if (empty || (item == null)) {
+                    setGraphic(null);
+                } else {
+                    final ColorPicker cp = new ColorPicker();
+                    cp.setValue(item);
+                    setGraphic(cp);
+                    cp.setOnAction((ActionEvent t) -> {
+                        getTableView().edit(getTableRow().getIndex(), column);
+                        commitEdit(cp.getValue());
+                    });
+                }
+            }
+
+            @Override
+            public void commitEdit(Color item) {
+                super.commitEdit(item);
+                DatasetBase dataset = getTableRow().getItem();
+                if (posMode) {
+                    dataset.setPosColor(item.toString());
+                } else {
+                    dataset.setNegColor(item.toString());
+                }
+                tableView.refresh();
+            }
+        });
+
+        return new PosNegCol(drawOnCol, colorColumn);
+
+    }
+
+    public TableColumn<DatasetBase, String> buildlabelColumn() {
+        StringConverter<String> sConverter = new DefaultStringConverter();
+        TableColumn<DatasetBase, String>  labelCol = new TableColumn<>("label");
+        labelCol.setCellFactory(tc -> new DatasetStringFieldTableCell(sConverter));
+        labelCol.setCellValueFactory((CellDataFeatures<DatasetBase, String> p) -> {
+            DatasetBase dataset = p.getValue();
+            String label = "";
+            int iDim = getDimNum();
+            if (dataset.getNDim() > iDim) {
+                label = dataset.getLabel(iDim);
+            }
+            return new ReadOnlyObjectWrapper<>(label);
+        });
+
+        labelCol.setPrefWidth(50);
+        return labelCol;
+    }
+
+    @SuppressWarnings("unused")
     private void nFreqDimsChanged(TableColumn.CellEditEvent<DatasetBase, Integer> event) {
-        int newFreqDim = event.getNewValue() != null ? event.getNewValue() : event.getOldValue();
+        int rawFreqDim = event.getNewValue() != null ? event.getNewValue() : event.getOldValue();
         DatasetBase dataset = event.getRowValue();
-        // freq dim must be between 0 and the max number of dimensions
-        newFreqDim = newFreqDim < 0 ? 0 : Math.min(newFreqDim, dataset.getNDim());
-        dataset.setNFreqDims(newFreqDim);
+        int clampedFreqDim = Math.clamp(rawFreqDim, 0, dataset.getNDim());
+        dataset.setNFreqDims(clampedFreqDim);
         tableView.refresh();
     }
 
@@ -566,7 +553,7 @@ public class DatasetsController implements Initializable, StageBasedController, 
     public static class ValueItem {
 
         int index;
-        private DoubleProperty value = new SimpleDoubleProperty();
+        private final DoubleProperty value = new SimpleDoubleProperty();
 
         public ValueItem(int index, double value) {
             this.index = index;
@@ -614,7 +601,7 @@ public class DatasetsController implements Initializable, StageBasedController, 
         ObservableList<ValueItem> valueList = FXCollections.observableArrayList();
         valueDataset = null;
         if (datasets.size() == 1) {
-            valueDataset = datasets.get(0);
+            valueDataset = datasets.getFirst();
             int nDim = valueDataset.getNDim();
 
             for (int i = 0; i < nDim; i++) {
@@ -656,7 +643,7 @@ public class DatasetsController implements Initializable, StageBasedController, 
         ObservableList<DatasetBase> datasets = tableView.getSelectionModel().getSelectedItems();
         valueDataset = null;
         if (datasets.size() == 1) {
-            valueDataset = datasets.get(0);
+            valueDataset = datasets.getFirst();
             if (savedValues.containsKey(valueDataset.getName())) {
                 valueTableView.setItems(toItems(savedValues.get(valueDataset.getName())));
                 saveValueTable();
@@ -702,7 +689,7 @@ public class DatasetsController implements Initializable, StageBasedController, 
                     editEvent.getRowValue().setValue(editEvent.getNewValue().doubleValue())
             );
 
-            valueTableView.getColumns().addAll(indexColumn, valueColumn);
+            valueTableView.getColumns().addAll(List.of(indexColumn, valueColumn));
             valueTableView.setPrefWidth(225);
             valueTableView.setPrefHeight(400);
             valueStage.setWidth(225);
